style(upload): align text correctly

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -106,7 +106,7 @@ label[for="file"] {
     margin: 6px auto 0 auto !important;
   }
 
-  .jWkLDY {
+  > div {
     display: block;
     color: #193765 !important;
 
